<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_drawable"
    android:paddingBottom="16dp"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingTop="16dp"
    tools:context="com.tatar.stormy.currentweather.CurrentWeatherActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/refreshImageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/refreshImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/refresh_image_descr"
        app:srcCompat="@drawable/refresh" />

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/iconImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/double_dash"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/timeTextView"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/weather_icon_descr"
        tools:srcCompat="@drawable/cloudy_night" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/temperatureTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/double_dash"
        android:textColor="#80ffffff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/temperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/double_dash"
        android:textColor="@android:color/white"
        android:textSize="150sp" />

    <ImageView
        android:id="@+id/degreeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/temperatureTextView"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@+id/temperatureTextView"
        android:layout_toRightOf="@+id/temperatureTextView"
        android:contentDescription="@string/degree_image_descr"
        app:srcCompat="@drawable/degree" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperatureTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/humidity_label"
                android:textColor="#80ffffff" />

            <TextView
                android:id="@+id/humidityTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/double_dash"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/rain_label"
                android:textColor="#80ffffff" />

            <TextView
                android:id="@+id/precipChanceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/double_dash"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/summaryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/hourlyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#40ffffff"
            android:text="HOURLY"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/dailyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="#40ffffff"
            android:text="7 DAYS"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>
